# vlib_std

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Config.cmake.in  Hardening.cmake  InstallRules.cmake  Macros.cmake  ProjectOptions.cmake
include/: vlib_std.h
src/: CMakeLists.txt  vlib_std.c
src/char/: vlib_isalnum.c  vlib_isalpha.c  vlib_isascii.c  vlib_isdigit.c  vlib_islower.c  vlib_isprint.c  vlib_isspace.c  vlib_isupper.c  vlib_tolower.c  vlib_toupper.c
src/internal/: vlib_internal.h
test/: CMakeLists.txt
test/char/: CMakeLists.txt  test_isalpha_explicit.c  unit_in_range_basic.c  unit_in_range_boundaries.c  unit_in_range_extreme_values.c  unit_in_range_mixed_ranges.c  unit_in_range_negative.c  unit_in_range_reference_equivalence.c  unit_isalnum_ascii_classification.c  unit_isalnum_consistency.c  unit_isalnum_digits.c  unit_isalnum_explicit.c  unit_isalnum_letters.c  unit_isalnum_logical_equivalence.c  unit_isalnum_non_alnum_rejected.c  unit_isalpha_ascii_classification.c  unit_isalpha_case_normalization.c  unit_isalpha_digits_rejected.c  unit_isalpha_explicit.c  unit_isalpha_lowercase_range.c  unit_isalpha_uppercase_range.c  unit_isascii_above_ascii_rejected.c  unit_isascii_ascii_range.c  unit_isascii_boundaries.c  unit_isascii_explicit.c  unit_isascii_negative_rejected.c  unit_isascii_reference_equivalence.c  unit_isdigit_ascii_classification.c  unit_isdigit_digit_range.c  unit_isdigit_explicit.c  unit_isdigit_letters_rejected.c  unit_islower_ascii_classification.c  unit_islower_explicit.c  unit_islower_non_alpha_rejected.c  unit_islower_range.c  unit_islower_reference_equivalence.c  unit_islower_uppercase_rejected.c  unit_isprint_control_rejected.c  unit_isprint_del_rejected.c  unit_isprint_explicit.c  (+31 more)
test/helpers/: test_assert.c  test_assert.h
